# IMK

./: .gitignore  AppInputSettingsUI.cs  Cargo.toml  IMEController.cs  IMK.csproj  IMK.sln  InputModeManager.cs  Program.cs  README.md  ShellHookWindow.cs  WinApi.cs  WindowMonitor.cs  build.bat  build.ps1
docs/plans/: 2026-01-27-imk-rust-design.md  2026-01-27-imk-rust-implementation.md
src/: lib.rs  main.rs
src/core/: caps_logic.rs  config.rs  mod.rs  mode_manager.rs  process.rs
src/platform_win/: ime.rs  mod.rs  tsf.rs  winapi.rs
src/service/: caps_interceptor.rs  mod.rs  window_monitor.rs
src/tray/: tray.rs
src/ui/: settings.rs
tests/: app_entry.rs  caps_interceptor.rs  caps_logic.rs  config_io.rs  config_parse.rs  ime_strategy.rs  mode_decision.rs  placeholder.rs  settings_window.rs  tray.rs  tsf_strategy.rs  winapi_stub.rs  window_monitor.rs
