[package]
name = "imk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_Ime",
  "Win32_System_Threading",
  "Win32_System_LibraryLoader",
  "Win32_UI_Shell",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus"
] }

gpui = { version = "0.2.2", default-features = true }

[dev-dependencies]
pretty_assertions = "1"
